<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="#E0FFFF"
    android:padding="20dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/kotak"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        android:layout_marginTop="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:gravity="center">

            <TextView
                android:id="@+id/sapa"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/sapa_user"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/button">

            <TextView
                android:id="@+id/nama"
                android:padding="15dp"
                android:text="@string/your_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/button">
                    <TextView
                        android:id="@+id/email"
                        android:text="@string/your_email"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:padding="15dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/button">

                    <TextView
                        android:id="@+id/alamat"
                        android:text="@string/your_address"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:padding="15dp"/>

                </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>